welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:14: error: type mismatch;
 found   : Unit
 required: Int
		 nbAdos=nbAdos+1
                       ^countTeen:15: error: type mismatch;
 found   : Unit
 required: Int
	}else nbAdos=nbAdos
                    ^